--- a/style.css
+++ b/style.css
@@ -1,54 +1,87 @@
 body{
-    background-color: rgb(250,250,250); /*CHECK*/
+    background-color: rgb(248, 248, 248); /*CHECK*/
+}
+.row {
+    max-width: 1000px;
+    margin: 0 auto;
 }
 nav {
     height: 60px;
     background-color: rgb(255,255,255); /*CHECK*/
-    border: 1px solid rgb(218, 218, 218); /*CHECK*/ 
+    border: 1.5px solid rgb(218, 218, 218); /*CHECK*/ 
 }
 #header-content {
-    max-width: 1000px;
-    padding: 5px 15px;
-    margin: 0 auto;
+    padding: 5px 0px;
     height: 100%;
     position: relative;
 }
-.icon {
+.icon, .icon2 {
     width: 35px;
-    margin-top: 4px;
+}
+.icon2 {
+    float: left;
+    margin-right: 6px;
+}
+.right-icons {
+    height: 38px;
+    margin-top: 5px;
+    padding-left: 12%;
 }
 #logo {
     width: 100px;
     height: 30px;
+    margin-top: 8px;
    
-    margin: 0;
+    /* margin: 0;
     position: absolute;
     top: 52%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-     /* css block above from https://www.w3schools.com/howto/howto_css_center-vertical.asp */
+     css block above from https://www.w3schools.com/howto/howto_css_center-vertical.asp */
 }
 input {
     height: 30px;
     width: 215px;
     font-size: 14px;
     text-align: center;
+    margin: 8px 10px;
 
     /*CHECK*/
     background: rgb(250,250,250);
-    border: solid 1px rgb(219,219,219);
+    border: solid 1.5px rgb(219,219,219);
     border-radius: 3px;
     color: rgb(38,38,38); 
 
-    margin: 0;
+    /* margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    /* css block above from https://www.w3schools.com/howto/howto_css_center-vertical.asp */
+    css block above from https://www.w3schools.com/howto/howto_css_center-vertical.asp */
 }
-.row {
-    max-width: 1000px;
-    margin: 0 auto;
+
+.main {
+    margin-top: 25px;
+    max-width: 970px;
+}
+#post {
+    background-color: rgb(255,255,255); /*CHECK*/
+    border: 1.5px solid rgb(226, 226, 226); /*CHECK*/ 
+    border-radius: 2px;
+    padding: 0;
+}
+.photo-meta {
+    padding: 15px;
+}
+.circle-small {
+    border-radius: 50%;
+    width: 35px;
+}
+.left-space {
+    margin-left: 10px;
+}
+.main-photo {
+    width: 100%;
+    height: 600px;
 }
