--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(248, 248, 248); /*CHECK*/
+    padding-bottom: 50px;
 }
 .row {
     max-width: 1000px;
@@ -15,17 +16,31 @@ nav {
     height: 100%;
     position: relative;
 }
-.icon, .icon2 {
+.icon {
+    width: 30px;
+}
+.line {
+    width: 5.5px;
+    vertical-align: middle;
+    margin: 0 7px;
+    margin-top: 3px;
+}
+.icon2 {
     width: 35px;
 }
 .icon2 {
     float: left;
     margin-right: 6px;
+    font-size: 20px;
+}
+.icon3 {
+    font-size: 17px;
+    margin-top:4px;
 }
 .right-icons {
-    height: 38px;
     margin-top: 5px;
     padding-left: 12%;
+    padding-top: 8px;
 }
 #logo {
     width: 100px;
@@ -65,18 +80,28 @@ input {
     margin-top: 25px;
     max-width: 970px;
 }
-#post {
+.no-padding {
+    padding: 0;
+}
+#post, .suggested {
     background-color: rgb(255,255,255); /*CHECK*/
     border: 1.5px solid rgb(226, 226, 226); /*CHECK*/ 
-    border-radius: 2px;
-    padding: 0;
+    border-radius: 3px;
 }
 .photo-meta {
     padding: 15px;
 }
+.comment-box {
+    padding: 5px 0;
+}
 .circle-small {
     border-radius: 50%;
     width: 35px;
+}
+.circle-big {
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
 }
 .left-space {
     margin-left: 10px;
@@ -84,4 +109,72 @@ input {
 .main-photo {
     width: 100%;
     height: 600px;
+}
+.float-right {
+    float: right;
+    margin-right:0;
+    width: auto;
+}
+.meta {
+    margin-top: 8px;
+    margin-bottom: 4px;
+}
+.meta2 {
+    margin-top: 15px;
+    height: 60px;
+}
+.link {
+    color: rgb(0, 55, 107);
+}
+.ig-blue {
+    color:rgb(0, 149, 246); 
+}
+.dull {
+    color: rgb(146, 146, 146);
+}
+hr {
+    margin: 10px auto;
+}
+.smaller {
+    font-size: smaller;
+}
+.small {
+    font-size: small;
+}
+.small-icon {
+    width: 16px;
+    vertical-align: text-top;
+}
+.suggested {
+    margin-top: 60px;
+    padding: 15px;
+}
+.col3 {
+    width: 31%;
+    display: inline-block;
+    margin-top: 15px;
+    padding: 20px;
+}
+.middle {
+    margin-right: 15px;
+    margin-left: 15px;
+}
+.center {
+    text-align: center;
+}
+button {
+    background-color:rgb(0, 149, 246);
+    width: 100%;
+    color: white;
+    margin-top: 10px;
+}
+.btn {
+    padding: 4px 12px;
+}
+
+#right-arrow {
+    position: absolute;
+    font-size: 25px;
+    right: 18px;
+    bottom: 115px;
 }
